fix contrast

--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ nav a:hover {
   position: absolute;
   inset: 0;
   background: rgba(0, 0, 0, .4);
-  z-index: 0;
+  z-index: 1;
 }
 
 .hero img {
@@ -141,15 +141,15 @@ nav a:hover {
 
 .hero h1 {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: black;
+  color: white;
   font-size: clamp(0.3rem, 1rem + 3vw, 2.5rem);
   text-align: center;
   overflow-y: auto;
-  z-index: 1;
-  background-color: transparent;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  inset: 0;
 }
 
 
